--- a/eParty/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/eParty/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@{
-    ViewBag.Title = "Dashboard";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+﻿
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <div class="container">
@@ -770,3 +771,5 @@
 </script>
 @section scripts {
 }
+
+
