--- a/eParty/Views/Home/Index.cshtml
+++ b/eParty/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
     <div class="container">
         <div class="row g-5 align-items-center">
             <div class="col-lg-7 col-md-12">
-                <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-4 animated bounceInDown">Chào mừng đến với UEFServ</small>
-                <h1 class="display-1 mb-4 animated bounceInDown">Đặt <span class="text-primary">UEF</span>Serv cho sự kiện trong mơ của bạn</h1>
+                <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-4 animated bounceInDown">Chào mừng đến với PartyServ</small>
+                <h1 class="display-1 mb-4 animated bounceInDown">Đặt <span class="text-primary">Party</span>Serv cho sự kiện trong mơ của bạn</h1>
                 <a href="" class="btn btn-primary border-0 rounded-pill py-3 px-4 px-md-5 me-4 animated bounceInLeft">Đặt ngay</a>
                 <a href="" class="btn btn-primary border-0 rounded-pill py-3 px-4 px-md-5 animated bounceInLeft">Tìm hiểu thêm</a>
             </div>
@@ -20,97 +20,6 @@
     </div>
 </div>
 <!-- Hero End -->
-<!-- About Start -->
-<div class="container-fluid py-6">
-    <div class="container">
-        <div class="row g-5 align-items-center">
-            <div class="col-lg-5 wow bounceInUp" data-wow-delay="0.1s">
-                <img src="/Content/landingpage/img/about.jpg" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-lg-7 wow bounceInUp" data-wow-delay="0.3s">
-                <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Về chúng tôi</small>
-                <h1 class="display-5 mb-4">Được tin tưởng bởi hơn 200 khách hàng hài lòng</h1>
-                <p class="mb-4">
-                    Chúng tôi cam kết mang đến dịch vụ chất lượng cao với sự tận tâm và chuyên nghiệp. Đội ngũ của chúng tôi luôn nỗ lực để đáp ứng mọi nhu cầu của khách hàng, từ những chi tiết nhỏ nhất đến những sự kiện lớn.
-                </p>
-                <div class="row g-4 text-dark mb-5">
-                    <div class="col-sm-6">
-                        <i class="fas fa-share text-primary me-2"></i>Giao đồ ăn tươi ngon và nhanh chóng
-                    </div>
-                    <div class="col-sm-6">
-                        <i class="fas fa-share text-primary me-2"></i>Hỗ trợ khách hàng 24/7
-                    </div>
-                    <div class="col-sm-6">
-                        <i class="fas fa-share text-primary me-2"></i>Tùy chỉnh dễ dàng theo yêu cầu
-                    </div>
-                    <div class="col-sm-6">
-                        <i class="fas fa-share text-primary me-2"></i>Ưu đãi hấp dẫn cho các bữa ăn ngon
-                    </div>
-                </div>
-                <a href="/Home/About" class="btn btn-primary py-3 px-5 rounded-pill">Về chúng tôi<i class="fas fa-arrow-right ps-2"></i></a>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- About End -->
-<!-- Fact Start-->
-<div class="container-fluid faqt py-6">
-    <div class="container">
-        <div class="row g-4 align-items-center">
-            <div class="col-lg-7">
-                <div class="row g-4">
-                    <div class="col-sm-4 wow bounceInUp" data-wow-delay="0.3s">
-                        <div class="faqt-item bg-primary rounded p-4 text-center">
-                            <i class="fas fa-users fa-4x mb-4 text-white"></i>
-                            <h1 class="display-4 fw-bold" data-toggle="counter-up">689</h1>
-                            <p class="text-dark text-uppercase fw-bold mb-0">Khách hàng hài lòng</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 wow bounceInUp" data-wow-delay="0.5s">
-                        <div class="faqt-item bg-primary rounded p-4 text-center">
-                            <i class="fas fa-users-cog fa-4x mb-4 text-white"></i>
-                            <h1 class="display-4 fw-bold" data-toggle="counter-up">107</h1>
-                            <p class="text-dark text-uppercase fw-bold mb-0">Đầu bếp chuyên nghiệp</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 wow bounceInUp" data-wow-delay="0.7s">
-                        <div class="faqt-item bg-primary rounded p-4 text-center">
-                            <i class="fas fa-check fa-4x mb-4 text-white"></i>
-                            <h1 class="display-4 fw-bold" data-toggle="counter-up">253</h1>
-                            <p class="text-dark text-uppercase fw-bold mb-0">Sự kiện hoàn thành</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 wow bounceInUp" data-wow-delay="0.1s">
-                <div class="video">
-                    <button type="button" class="btn btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
-                        <span></span>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Modal Video -->
-<div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content rounded-0">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Video Youtube</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <!-- 16:9 aspect ratio -->
-                <div class="ratio ratio-16x9">
-                    <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
-                            allow="autoplay"></iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Fact End -->
 <!-- Service Start -->
 <div class="container-fluid service py-6">
     <div class="container">
@@ -985,161 +894,3 @@
     </div>
 </div>
 <!-- Menu End -->
-<!-- Book Us Start -->
-<div class="container-fluid contact py-6 wow bounceInUp" data-wow-delay="0.1s">
-    <div class="container">
-        <div class="row g-0">
-            <div class="col-1">
-                <img src="/Content/landingpage/img/background-site.jpg" class="img-fluid h-100 w-100 rounded-start" style="object-fit: cover; opacity: 0.7;" alt="">
-            </div>
-            <div class="col-10">
-                <div class="border-bottom border-top border-primary bg-light py-5 px-4">
-                    <div class="text-center">
-                        <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Đặt dịch vụ</small>
-                        <h1 class="display-5 mb-5">Bạn muốn chúng tôi phục vụ ở đâu?</h1>
-                    </div>
-                    <div class="row g-4 form">
-                        <div class="col-lg-4 col-md-6">
-                            <select class="form-select border-primary p-2" aria-label="Default select example">
-                                <option selected>Chọn quốc gia</option>
-                                <option value="1">Việt Nam</option>
-                                <option value="2">Anh</option>
-                                <option value="3">Ấn Độ</option>
-                            </select>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <select class="form-select border-primary p-2" aria-label="Default select example">
-                                <option selected>Chọn thành phố</option>
-                                <option value="1">Tùy thuộc vào quốc gia</option>
-                                <option value="2">London</option>
-                                <option value="3">Mumbai</option>
-                            </select>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <select class="form-select border-primary p-2" aria-label="Default select example">
-                                <option selected>Chọn địa điểm</option>
-                                <option value="1">Tùy thuộc vào quốc gia</option>
-                                <option value="2">London</option>
-                                <option value="3">Mumbai</option>
-                            </select>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <select class="form-select border-primary p-2" aria-label="Default select example">
-                                <option selected>Sự kiện nhỏ</option>
-                                <option value="1">Loại sự kiện</option>
-                                <option value="2">Sự kiện lớn</option>
-                                <option value="3">Sự kiện nhỏ</option>
-                            </select>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <select class="form-select border-primary p-2" aria-label="Default select example">
-                                <option selected>Số lượng khách</option>
-                                <option value="1">100-200</option>
-                                <option value="2">300-400</option>
-                                <option value="3">500-600</option>
-                                <option value="4">700-800</option>
-                                <option value="5">900-1000</option>
-                                <option value="6">1000+</option>
-                            </select>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <select class="form-select border-primary p-2" aria-label="Default select example">
-                                <option selected>Ăn chay</option>
-                                <option value="1">Ăn chay</option>
-                                <option value="2">Không chay</option>
-                            </select>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <input type="mobile" class="form-control border-primary p-2" placeholder="Số điện thoại của bạn">
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <input type="date" class="form-control border-primary p-2" placeholder="Chọn ngày">
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <input type="email" class="form-control border-primary p-2" placeholder="Nhập email của bạn">
-                        </div>
-                        <div class="col-12 text-center">
-                            <button type="submit" class="btn btn-primary px-5 py-3 rounded-pill">Gửi ngay</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-1">
-                <img src="/Content/landingpage/img/background-site.jpg" class="img-fluid h-100 w-100 rounded-end" style="object-fit: cover; opacity: 0.7;" alt="">
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Book Us End -->
-<!-- Team Start -->
-<div class="container-fluid team py-6">
-    <div class="container">
-        <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
-            <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Đội ngũ của chúng tôi</small>
-            <h1 class="display-5 mb-5">Chúng tôi có đội ngũ đầu bếp giàu kinh nghiệm</h1>
-        </div>
-        <div class="row g-4">
-            <div class="col-lg-3 col-md-6 wow bounceInUp" data-wow-delay="0.1s">
-                <div class="team-item rounded">
-                    <img class="img-fluid rounded-top fixed-img-size" src="/Content/landingpage/img/team-1.jpg" alt="">
-                    <div class="team-content text-center py-3 bg-dark rounded-bottom">
-                        <h4 class="text-primary">Nguyễn Hoàng Phúc</h4>
-                        <p class="text-white mb-0">Đầu bếp trang trí</p>
-                    </div>
-                    <div class="team-icon d-flex flex-column justify-content-center m-4">
-                        <a class="share btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fas fa-share-alt"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 wow bounceInUp" data-wow-delay="0.3s">
-                <div class="team-item rounded">
-                    <img class="img-fluid rounded-top fixed-img-size" src="/Content/landingpage/img/team-2.jpg" alt="">
-                    <div class="team-content text-center py-3 bg-dark rounded-bottom">
-                        <h4 class="text-primary">Trần Tấn Sang</h4>
-                        <p class="text-white mb-0">Nhân viên bếp</p>
-                    </div>
-                    <div class="team-icon d-flex flex-column justify-content-center m-4">
-                        <a class="share btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fas fa-share-alt"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 wow bounceInUp" data-wow-delay="0.5s">
-                <div class="team-item rounded">
-                    <img class="img-fluid rounded-top fixed-img-size" src="/Content/landingpage/img/team-3.jpg" alt="">
-                    <div class="team-content text-center py-3 bg-dark rounded-bottom">
-                        <h4 class="text-primary">Nguyễn Tấn Thiện Huy</h4>
-                        <p class="text-white mb-0">Nhân viên bếp</p>
-                    </div>
-                    <div class="team-icon d-flex flex-column justify-content-center m-4">
-                        <a class="share btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fas fa-share-alt"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 wow bounceInUp" data-wow-delay="0.7s">
-                <div class="team-item rounded">
-                    <img class="img-fluid rounded-top fixed-img-size" src="/Content/landingpage/img/team-4.jpg" alt="">
-                    <div class="team-content text-center py-3 bg-dark rounded-bottom">
-                        <h4 class="text-primary">Nguyễn Ngọc Triệu</h4>
-                        <p class="text-white mb-0">Bếp trưởng</p>
-                    </div>
-                    <div class="team-icon d-flex flex-column justify-content-center m-4">
-                        <a class="share btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fas fa-share-alt"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="share-link btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Team End -->
