--- a/eParty/Views/Shared/LayoutUser.cshtml
+++ b/eParty/Views/Shared/LayoutUser.cshtml
@@ -43,7 +43,7 @@
         <div class="container">
             <nav class="navbar navbar-light navbar-expand-lg py-4">
                 <a href="/Home/Index" class="navbar-brand">
-                    <h1 class="text-primary fw-bold mb-0">UEF<span class="text-dark">Serv</span></h1>
+                    <h1 class="text-primary fw-bold mb-0">Party<span class="text-dark">Serv</span></h1>
                 </a>
                 <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars text-primary"></span>
