Chinh sua chi tiet

--- a/eParty/Views/Home/Index.cshtml
+++ b/eParty/Views/Home/Index.cshtml
@@ -1142,4 +1142,26 @@
         </div>
     </div>
 </div>
-<!-- Team End -->
+<style>
+
+    .eapps-widget-toolbar,
+    .eapps-widget-toolbar__message {
+        display: none !important;
+    }
+</style>
+<div style="position: relative; overflow: hidden;">
+    <script src="https://elfsightcdn.com/platform.js" async></script>
+    <div class="elfsight-app-cdd7610e-4bbc-4d92-8e53-6d32690ee0c9" data-elfsight-app-lazy></div>
+
+    <!-- Khối che watermark -->
+    <div style="
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    height:51px;
+    background:white;
+    z-index:10;
+  "></div>
+</div>
+
