--- a/eParty/Views/Shared/LayoutUser.cshtml
+++ b/eParty/Views/Shared/LayoutUser.cshtml
@@ -132,26 +132,9 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-item">
-                        <h4 class="mb-4">Thư viện hình ảnh</h4>
+                        <h4 class="mb-4">Địa điểm</h4>
                         <div class="row g-2">
-                            <div class="col-4">
-                                <img src="/Content/landingpage/img/menu-01.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img src="/Content/landingpage/img/menu-02.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img src="/Content/landingpage/img/menu-03.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img src="/Content/landingpage/img/menu-04.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img src="/Content/landingpage/img/menu-05.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img src="/Content/landingpage/img/menu-06.jpg" class="img-fluid rounded-circle border border-primary p-2" alt="">
-                            </div>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7838.361146055212!2d106.703644!3d10.797478!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f315d625c89%3A0x73084dd08a9fe5a4!2sHCMC%20University%20of%20Economics%20and%20Finance%20(UEF)%20-%20Campus%20141!5e0!3m2!1sen!2sus!4v1759987263033!5m2!1sen!2sus" width="300" height="230" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
