--- a/eParty/Views/Shared/LayoutUser.cshtml
+++ b/eParty/Views/Shared/LayoutUser.cshtml
@@ -60,7 +60,7 @@
                             <div class="dropdown-menu bg-light">
                                 <a href="/Home/Book" class="dropdown-item">Đặt dịch vụ</a>
                                 <a href="/Home/Team" class="dropdown-item">Đội ngũ</a>
-                                <a href="/Dashboard/Index" class="dropdown-item">Đến trang admin</a>
+                                <a href="/Admin/Dashboard/Index" class="dropdown-item">Đến trang admin</a>
                                 <a href="/Home/Login" class="dropdown-item">Đến trang đăng nhập</a>
                             </div>
                         </div>
