--- a/eParty/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/eParty/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -29,7 +29,7 @@
                             <div class="col col-stats ms-3 ms-sm-0">
                                 <div class="numbers">
                                     <p class="card-category">Customers</p>
-                                    <h4 class="card-title">@Model.Users.Count()</h4>
+                                    <h4 class="card-title">@Model.RoleUsers.Count()</h4>
                                 </div>
                             </div>
                         </div>
