minor update to category

--- a/eParty/Areas/Admin/Views/Foods/Details.cshtml
+++ b/eParty/Areas/Admin/Views/Foods/Details.cshtml
@@ -32,6 +32,8 @@
                         <dl class="row">
                             <dt class="col-sm-3">Name</dt>
                             <dd class="col-sm-9">@Model.Food.Name</dd>
+                            <dt class="col-sm-3">Category</dt>
+                            <dd class="col-sm-9">@Model.Food.Category.Name</dd>
                             <dt class="col-sm-3">Cost</dt>
                             <dd class="col-sm-9">@Model.Food.Cost</dd>
                             <dt class="col-sm-3">Unit</dt>
